--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Nellas_Term project</title>
 </head>
 <body>
-    
+    <div>
+        <h1><a href="Coffee Bean">Coffee Bean</a></h1>
+    </div>
+    <div id="Home">
+        <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#Menu">Menu</a></li>
+            <li><a href="#Reservations">Reservations</a></li>
+            <li><a href="#Blog">Blog</a></li>
+            <li><a href="#Contact us">Contact us</a></li>
+        </ul>
+    </div>
 </body>
 </html>
