--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
             <li><a href="#Contact us">Contact us</a></li>
         </ul>
     </div>
+    <div>
+        <h2>Uniquely Fresh Taste</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam dignissimos minus odit. Officia tempore asperiores cumque repudiandae illo eius officiis at atque nobis ad, id beatae ullam sit voluptates excepturi?</p>
+        <a href="Learn more">Learn more</a>
+        <h3>New Coffee Flavor</h3>
+        <a href="Read more">Read more</a>
+        <h3>This Friday 25% Off</h3>
+        <a href="Read more">Read more</a>
+        <p>What happens here</p>
+        <h2>Coffee House Merchandise</h>
+    </div>
 </body>
 </html>
