--- a/index.html
+++ b/index.html
@@ -30,5 +30,40 @@
         <p>What happens here</p>
         <h2>Coffee House Merchandise</h>
     </div>
+    <hr>
+        <div id="Menu">
+        <img src="images\product1.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>%71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product2.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>$71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product3.jpg" alt="This is a photo" width="20%" height="20%"> 
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>$71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product4.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>$71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product5.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>$71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product6.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>$71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product7.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p><strong>$71.00</strong></p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product8.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+       <p>What happens here</p>
+       </div>     
 </body>
 </html>
