--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
         <p><strong>Paper pouch</strong></p>
         *****
        <p>What happens here</p>
-       </div>     
+       </div>
+       <div>
+        <h3>This friday 25% Off % Special Gift</h3>
+        <a href="Read more">Read more</a>
+        <p>What happens here</p>
+        <h3>Merchandise Sale</h3>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise1.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p>$71.00</p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise2.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p>$71.00</p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise3.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p>$71.00</p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise4.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p>$71.00</p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise5.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p>$71.00</p>
+        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise6.jpg" alt="This is a photo" width="20%" height="20%">
+        <p><strong>Paper pouch</strong></p>
+        *****
+        <p>$71.00</p>
+        </div>     
 </body>
 </html>
