--- a/index.html
+++ b/index.html
@@ -94,6 +94,33 @@
         <p><strong>Paper pouch</strong></p>
         *****
         <p>$71.00</p>
-        </div>     
+        </div>
+        <h3>New Coffee Shop</h3>  
+        <a href="Read more">Read more</a>
+        <h3>Free Taste Coffee</h3>
+        <a href="Read more">Read more</a>
+        <h3>Fresh Coffee Beans</h3>
+        <a href="Read more">Read more</a>
+        <div id="Reservations">
+        <h3>Reservation Form</h3>
+        <hr>
+        <label for="text">Name:</label>
+        <input type="text" placeholder="Last Name, First Name" id="">
+        <label for="text">Email Address:</label>
+        <input type="text" placeholder="Email@gmail.com">
+        <label for="text">Phone Number:</label>
+        <input type="text" placeholder="(Area code) 1234567890" id="">
+        <label for="text">Reservation Detail:</label>
+        <input type="text" placeholder="adwdas" id="">
+        <br>
+        <label for="text">Additional Reciept:</label>
+       <textarea name="" id="" cols="30" rows="10"></textarea>
+        <h3>Payment</h3>
+        <p>Payment Accepted Cards</p>
+       <label for="text">Credit Card Name</label>
+       <input type="text" placeholder="John Dee">
+       <label for="text">Credit Card Number</label>
+       <input type="text" placeholder="1234567890" id="">
+       </div>     
 </body>
 </html>
