--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         *****
         <p>$71.00</p>
         </div>
+        <div>
         <h3>New Coffee Shop</h3>  
         <a href="Read more">Read more</a>
         <h3>Free Taste Coffee</h3>
@@ -111,7 +112,7 @@
         <label for="text">Phone Number:</label>
         <input type="text" placeholder="(Area code) 1234567890" id="">
         <label for="text">Reservation Detail:</label>
-        <input type="text" placeholder="adwdas" id="">
+        <input type="text" placeholder="....." id="">
         <br>
         <label for="text">Additional Reciept:</label>
        <textarea name="" id="" cols="30" rows="10"></textarea>
@@ -121,6 +122,49 @@
        <input type="text" placeholder="John Dee">
        <label for="text">Credit Card Number</label>
        <input type="text" placeholder="1234567890" id="">
-       </div>     
+       </div>
+       </div>
+       <h3>Opening Hours</h3>
+       <br>
+       <p><strong>Day ..... Availability</strong></p>
+       <p>Monday      ..... Closed</p>
+       <p>Tuesday     ..... 09:00-22:00</p>
+       <p>Wednesday   ..... 09:00-22:00</p>
+       <p>Thursday    ..... 09:00-22:00</p>
+       </div>
+        <div id="Blog">
+        <h4>Latest Post</h4>       
+        <h4>Expand your mind, Change everything</h4>
+        <p>12.02.2017</p>
+        <h4>Places to get lost</h4>
+        <p>12.02.2017</p>
+        <h4>Lewis Howes</h4>
+        <p>14.02.2017</p>
+        </div>
+        <div id="Contact us">
+        <h4>Contact</h4>
+        <p>info@coffeebean.com</p>
+        <p>1-444-123-4559</p>
+        <p>Raymond Boulevard 224, New York</p>
+        <h3>The Last Standard Post</h3>
+        <input type="text" name="" id=""> <input type="button" value="search">
+        <h3>Other Location</h3>
+        <h4>Coffee Bean Philippines</h4>
+        <p>1234 IT Park</p>
+        <p>Cebu City</p>
+        <h4>Coffee Bean Tokyo</h4>
+        <p>123 address</p>
+        <p>Tokyo Japan</p>
+        </div>
+        <h3>Coffee Bean</h3>
+        <ul>
+            <li><a href="text">Twitter</a></li>
+            <li><a href="text">Instagram</a></li>
+            <li><a href="text">Facebook</a></li>
+            <li><a href="text">Tumblr</a></li>
+            <li><a href="text">Linkeden</a></li>
+        </ul>
+        <p>&copy; 2020 All rights Reserved</p>
+        </div>     
 </body>
 </html>
