--- a/index.html
+++ b/index.html
@@ -4,167 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nellas_Term project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Nellas_Term Project</title>
 </head>
 <body>
-    <div>
-        <h1><a href="Coffee Bean">Coffee Bean</a></h1>
-    </div>
-    <div id="Home">
-        <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#Menu">Menu</a></li>
-            <li><a href="#Reservations">Reservations</a></li>
-            <li><a href="#Blog">Blog</a></li>
-            <li><a href="#Contact us">Contact us</a></li>
-        </ul>
-    </div>
-    <div>
-        <h2>Uniquely Fresh Taste</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam dignissimos minus odit. Officia tempore asperiores cumque repudiandae illo eius officiis at atque nobis ad, id beatae ullam sit voluptates excepturi?</p>
-        <a href="Learn more">Learn more</a>
-        <h3>New Coffee Flavor</h3>
-        <a href="Read more">Read more</a>
-        <h3>This Friday 25% Off</h3>
-        <a href="Read more">Read more</a>
-        <p>What happens here</p>
-        <h2>Coffee House Merchandise</h>
-    </div>
-    <hr>
-        <div id="Menu">
-        <img src="images\product1.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>%71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product2.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>$71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product3.jpg" alt="This is a photo" width="20%" height="20%"> 
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>$71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product4.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>$71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product5.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>$71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product6.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>$71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product7.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p><strong>$71.00</strong></p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\product8.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-       <p>What happens here</p>
-       </div>
-       <div>
-        <h3>This friday 25% Off % Special Gift</h3>
-        <a href="Read more">Read more</a>
-        <p>What happens here</p>
-        <h3>Merchandise Sale</h3>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise1.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p>$71.00</p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise2.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p>$71.00</p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise3.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p>$71.00</p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise4.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p>$71.00</p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise5.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p>$71.00</p>
-        <img src="C:\Users\VOYAGER\Documents\GitHub\term-project1\images\merchandise6.jpg" alt="This is a photo" width="20%" height="20%">
-        <p><strong>Paper pouch</strong></p>
-        *****
-        <p>$71.00</p>
-        </div>
-        <div>
-        <h3>New Coffee Shop</h3>  
-        <a href="Read more">Read more</a>
-        <h3>Free Taste Coffee</h3>
-        <a href="Read more">Read more</a>
-        <h3>Fresh Coffee Beans</h3>
-        <a href="Read more">Read more</a>
-        <div id="Reservations">
-        <h3>Reservation Form</h3>
-        <hr>
-        <label for="text">Name:</label>
-        <input type="text" placeholder="Last Name, First Name" id="">
-        <label for="text">Email Address:</label>
-        <input type="text" placeholder="Email@gmail.com">
-        <label for="text">Phone Number:</label>
-        <input type="text" placeholder="(Area code) 1234567890" id="">
-        <label for="text">Reservation Detail:</label>
-        <input type="text" placeholder="....." id="">
-        <br>
-        <label for="text">Additional Reciept:</label>
-       <textarea name="" id="" cols="30" rows="10"></textarea>
-        <h3>Payment</h3>
-        <p>Payment Accepted Cards</p>
-       <label for="text">Credit Card Name</label>
-       <input type="text" placeholder="John Dee">
-       <label for="text">Credit Card Number</label>
-       <input type="text" placeholder="1234567890" id="">
-       </div>
-       </div>
-       <h3>Opening Hours</h3>
-       <br>
-       <p><strong>Day ..... Availability</strong></p>
-       <p>Monday      ..... Closed</p>
-       <p>Tuesday     ..... 09:00-22:00</p>
-       <p>Wednesday   ..... 09:00-22:00</p>
-       <p>Thursday    ..... 09:00-22:00</p>
-       </div>
-        <div id="Blog">
-        <h4>Latest Post</h4>       
-        <h4>Expand your mind, Change everything</h4>
-        <p>12.02.2017</p>
-        <h4>Places to get lost</h4>
-        <p>12.02.2017</p>
-        <h4>Lewis Howes</h4>
-        <p>14.02.2017</p>
-        </div>
-        <div id="Contact us">
-        <h4>Contact</h4>
-        <p>info@coffeebean.com</p>
-        <p>1-444-123-4559</p>
-        <p>Raymond Boulevard 224, New York</p>
-        <h3>The Last Standard Post</h3>
-        <input type="text" name="" id=""> <input type="button" value="search">
-        <h3>Other Location</h3>
-        <h4>Coffee Bean Philippines</h4>
-        <p>1234 IT Park</p>
-        <p>Cebu City</p>
-        <h4>Coffee Bean Tokyo</h4>
-        <p>123 address</p>
-        <p>Tokyo Japan</p>
-        </div>
-        <h3>Coffee Bean</h3>
-        <ul>
-            <li><a href="text">Twitter</a></li>
-            <li><a href="text">Instagram</a></li>
-            <li><a href="text">Facebook</a></li>
-            <li><a href="text">Tumblr</a></li>
-            <li><a href="text">Linkeden</a></li>
-        </ul>
-        <p>&copy; 2020 All rights Reserved</p>
-        </div>     
-</body>
-</html>
+
+<div class="header">
+<div class="nav a">
+    <h1><a href="#">Coffee Bean</a></h1>
+</div>
+
+<div class="nav li">
+<ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Menu</a></li>
+    <li><a href="#" >Reservation</a></li>
+    <li><a href="#" >Blog</a></li>
+    <li><a href="#">Contact Us</a></li>
+</ul>
+</div>
+</div>
