--- a/index.html
+++ b/index.html
@@ -131,3 +131,44 @@
             <a href="#">Read More</a>
         </div>
         </div>
+
+        <br>
+<br>
+<div>
+<div class="whathappens2"><p>What Happens Here</p>
+    <strong><h2>Merchandise Sale</h2></strong>
+</div>
+</div>
+<hr align="center" width="10%" color="#B67233">
+<br>
+<br>
+
+<div class="pic">
+<div class="pic1">
+    <img src="images/product1.jpg" alt="This is a photo" width="300px" height="300px">
+    <p><strong><h4>Paper Pouch</h4></strong></p>
+    <p>*****</p>
+    <p>$71.00</p>
+</div>
+
+<div class="pic2">
+    <img src="images/product2.jpg" alt="This is a photo" width="300px" height="300px">
+    <p><strong><h4>Paper Pouch</h4></strong></p>
+    <p>*****</p>
+    <p>$71.00</p>
+</div>
+
+<div class="pic3">
+    <img src="images/product3.jpg" alt="This is a photo" width="300px" height="300px">
+    <p><strong><h4>Paper Pouch</h4></strong></p>
+    <p>*****</p>
+    <p>$71.00</p>
+</div>
+
+<div class="pic4">
+    <img src="images/product4.jpg" alt="This is a photo" width="300px" height="300px">
+    <p><strong><h4>Paper Pouch</h4></strong></p>
+    <p>*****</p>
+    <p>$71.00</p>
+</div>
+</div>
